dtor/tests/errors/dtor-duplicate.stderr
error: Duplicate meta attribute: 'method = ... ,
 --> tests/errors/dtor-duplicate.rs:3:1
  |
3 | #[dtor(method = term, method = unload)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Duplicate meta attribute: 'no_warn_on_missing_unsafe = ... ,
 --> tests/errors/dtor-duplicate.rs:7:1
  |
7 | #[dtor(unsafe, unsafe)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)
